--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "next-fonts": "^1.0.3",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^5.0.1"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.7"
+    "babel-plugin-styled-components": "^1.10.7",
+    "file-loader": "^5.0.2",
+    "url-loader": "^3.0.0"
   }
 }
