--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,6 +22,7 @@
       "path": "styles/theme.scss",
       "imports": [
         "styles/reset.scss",
+        "styles/fonts.css",
         "styles/base.scss",
         "styles/components/landing.scss",
         "styles/components/sell.scss",
