--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@zeit/next-sass": "^1.0.1",
     "next": "^9.2.1",
     "next-fonts": "^1.0.3",
+    "nextjs-fonts": "^0.22.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
